--- a/ambassador-hub.html
+++ b/ambassador-hub.html
@@ -115,19 +115,11 @@
            </div>
         </div>
         <div class="profile judges-item-3">
-            <img src="images/Ambassadors/sebnem_gurler_headshot.jpg" alt="Sebnem Gurler">
+            <img src="images/Ambassadors/sebnem_gurler_headshot.jpg" alt="Şebnem Gürler">
             <div class="profile-details">
-                <h4>Sebnem Gurler - Türkiye</h4>
-                <h5>Çorlu Science and Art Center </h5>
-                <p>I am a Turkish language teacher at Çorlu Science and Art Center (BİLSEM), where my greatest motivation is to support students in discovering and developing their individual potential.</p>
-
-                <p>By embracing innovative approaches in education, I have taken an active role in various national and international projects. I have mentored award-winning student projects and co-authored a published book on values education.</p>
-
-                <p>Web-based educational game design is one of my key areas of expertise. I develop interactive digital games aimed at enhancing student engagement and enriching the learning experience. One of my projects in this field received national recognition with an award in the Educational Technologies category at TEKNOFEST.</p>
-
-                <p>I continue to design creative and inclusive educational projects that aim to offer diverse learning opportunities and contribute to improving equality and quality in education.</p>
-
-                <p>Areas of interest: Project-based learning, coding, values education, digital transformation in education, student-centered teaching, interdisciplinary learning models.</p>
+                <h4>Şebnem Gürler - Türkiye</h4>
+                <h5>Çorlu Bilim ve Sanat Merkezi</h5>
+                <p>I am Şebnem Gürler. I work as a Turkish language teacher and project mentor at Çorlu Science and Art Center. Throughout my twenty-year professional experience, I have specialized in project-based learning, values education, culturally grounded instruction, digital game development, and STEAM applications. I conduct scientific research and innovative educational projects with my students in platforms such as TÜBİTAK 2204, TEKNOFEST, Scientix, and HundrED. My work focuses on integrating culture, science, and creativity to strengthen students’ research and production skills.</p>
             </div>
         </div>
         <div class="profile judges-item-4">
@@ -326,6 +318,8 @@
     <p>GCU-4th Semester, Section A1</p>
     <p><strong>Jonathan Robinson - Taiwan</strong></p>
     <p>Bit by Bit Coding Chapter</p>
+    <p><strong>Shreya Sinha - Canada</strong></p>
+    <p>Turner Fenton Secondary School</p>
 
 </body>
 </html>
