--- a/courses.html
+++ b/courses.html
@@ -130,7 +130,7 @@ function registera() {
 
 <!-- Fall 2025 B -->
 <div class="container">
-    <h1>Fall 2025 Session B Courses (Current)</h1>
+    <h1>Fall 2025 Session B Courses (Past)</h1>
     <p>All prep courses run for 4 weeks, meeting via Discord on October 25th, November 1st, November 8th, and November 15th. These courses include an end-of-session hackathon on November 22nd from 12pm-3pm Eastern Time.</p>
     <h2>Web Development Hackathon Prep</h2>
     <ul>
@@ -156,7 +156,8 @@ function registera() {
             <div class="nested-list">Time: 12:00 PM Eastern Time - 1:00 PM Eastern Time</div>
         </li>
     </ul>
-    <button class="button" onclick="registerb()">Register</button>
+    <!--<button class="button" onclick="registerb()">Register</button>-->
+    <p>Registration Closed</p>
 </div>
 <script>
 function registerb() {
@@ -167,7 +168,7 @@ function registerb() {
 <!-- Spring 2026 -->
 <div class="container">
     <h1>Spring 2026 Session A Courses (Upcoming)</h1>
-    <p>All prep courses run for 4 weeks, meeting via Discord on January 3rd, January 10th, January 17th, and January 24th. These courses include an end-of-session hackathon on January 31st from 12pm-3pm Eastern Time.</p>
+    <p>All prep courses run for 4 weeks, meeting via Discord on February 21st, February 28th, March 7th, March 14th. These courses include an end-of-session hackathon on March 21st from 12pm-3pm Eastern Time.</p>
     <h2>Web Development Hackathon Prep</h2>
     <ul>
         <li>Web Dev Prep Beginner
@@ -193,12 +194,12 @@ function registerb() {
         </li>
     </ul>
     <!--<button class="button" onclick="register()">Register</button>-->
-    <p>Registration Opens December 1st, 2025</p>
+    <p>Registration Opens January 15th, 2026</p>
 </div>
 
 <div class="container">
     <h1>Spring 2026 Session B Courses (Upcoming)</h1>
-    <p>All prep courses run for 4 weeks, meeting via Discord on February 7th, February 14th, February 21st, and February 28th. These courses include an end-of-session hackathon on March 7th from 12pm-3pm Eastern Time.</p>
+    <p>All prep courses run for 4 weeks, meeting via Discord on March 28th, April 4th, April 11th, April 18th. These courses include an end-of-session hackathon on April 25th from 12pm-3pm Eastern Time.</p>
     <h2>Web Development Hackathon Prep</h2>
     <ul>
         <li>Web Dev Prep Beginner
@@ -224,7 +225,7 @@ function registerb() {
         </li>
     </ul>
     <!--<button class="button" onclick="register()">Register</button>-->
-    <p>Registration Opens December 1st, 2025</p>
+    <p>Registration Opens April 1st, 2026</p>
 </div>
 
 <!-- Summer 2026 -->
