--- a/hackathons.html
+++ b/hackathons.html
@@ -33,7 +33,7 @@
     </nav>
     
     <div class="grid-container grid-container-hackathon">
-        <!-- Current Hackathons -->
+        <!-- Summer 2025 Hackathons -->
         <div class="container">
             <h1>Summer 2025 Hackathons (Past)</h1>
             <ul>
@@ -53,18 +53,58 @@
             </script>
         </div>
 
-        <!-- Upcoming Hackathons -->
+        <!-- Fall 2025 Hackathons -->
         <div class="container">
-            <h1>Fall 2025 Hackathons (Current)</h1>
+            <h1>Fall 2025 Hackathons (Past)</h1>
             <ul>
                 <li>Fall 2025 Session A Hackathon (Past)
                     <div class="nested-list">Date: October 18th, 2025, Time: 12:00 PM Eastern Time - 3:00 PM Eastern Time</div>
                 </li>
-                <li>Fall 2025 Session B Hackathon (Upcoming)
+                <li>Fall 2025 Session B Hackathon (Past)
                     <div class="nested-list">Date: November 22nd, 2025, Time: 12:00 PM Eastern Time - 3:00 PM Eastern Time</div>
                 </li>
             </ul>
-            <button class="button" onclick="register()">Register</button>
+            <!--<button class="button" onclick="register()">Register</button>-->
+                <script>
+                    function register() {
+                        window.location.href = "https://docs.google.com/forms/d/e/1FAIpQLScrI4yertFJtbNOex9eocFzFvAkjxOtI8MPNUry_3YLPS9GBA/viewform?usp=dialog";
+                    }
+                </script>
+        </div>
+
+        <!-- Spring 2026 Hackathons -->
+        <div class="container">
+            <h1>Spring 2026 Hackathons (Upcoming)</h1>
+            <ul>
+                <li>Spring 2026 Session A Hackathon (Upcoming)
+                    <div class="nested-list">Date: March 21st, 2026, Time: 12:00 PM Eastern Time - 3:00 PM Eastern Time</div>
+                </li>
+                <li>Spring 2026 Session B Hackathon (Upcoming)
+                    <div class="nested-list">Date: April 25th, 2025, Time: 12:00 PM Eastern Time - 3:00 PM Eastern Time</div>
+                </li>
+            </ul>
+            <!--<button class="button" onclick="register()">Register</button>-->
+            <p>Registration Opens January 15th, 2026</p>
+                <script>
+                    function register() {
+                        window.location.href = "https://docs.google.com/forms/d/e/1FAIpQLScrI4yertFJtbNOex9eocFzFvAkjxOtI8MPNUry_3YLPS9GBA/viewform?usp=dialog";
+                    }
+                </script>
+        </div>
+
+        <!-- Summer 2026 Hackathons -->
+        <div class="container">
+            <h1>Summer 2026 Hackathons (Upcoming)</h1>
+            <ul>
+                <li>Summer 2026 Session A Hackathon (Upcoming)
+                    <div class="nested-list">Date: July 25th, 2026, Time: 12:00 PM Eastern Time - 3:00 PM Eastern Time</div>
+                </li>
+                <li>Summer 2026 Session B Hackathon (Upcoming)
+                    <div class="nested-list">Date: August 22nd, 2025, Time: 12:00 PM Eastern Time - 3:00 PM Eastern Time</div>
+                </li>
+            </ul>
+            <!--<button class="button" onclick="register()">Register</button>-->
+            <p>Registration Opens May 1st, 2026</p>
                 <script>
                     function register() {
                         window.location.href = "https://docs.google.com/forms/d/e/1FAIpQLScrI4yertFJtbNOex9eocFzFvAkjxOtI8MPNUry_3YLPS9GBA/viewform?usp=dialog";
