--- a/aboutus.html
+++ b/aboutus.html
@@ -186,7 +186,7 @@
                 </div>
             </div>
             <div class="coaches">
-                <!--ROW 4
+                <!--ROW 4-->
                 <div class="profile coaches-item-1">
                     <img src="images/inchara_padmanabh_headshot.png" alt="Inchara Padmanabh">
                     <div class="profile-details">
@@ -216,13 +216,19 @@
                     </div>
                 </div>
                 <div class="profile coaches-item-4">
-                    <img src="images/boubacar_ba_headshot.jpg" alt="Boubacar Ba">
+                    <!--<img src="images/boubacar_ba_headshot.jpg" alt="Boubacar Ba">
                     <div class="profile-details">
                         <h4>Boubacar Ba</h4>
                         <h5>Laurentian University</h5>
                         <p>I am a Computer Science student at Laurentian University with a passion in software development, machine learning, and data-driven projects. I enjoy learning new skills and sharing my knowledge to others. I am Bilingual in French and English and I'm eager to make a difference and assist others in developing their abilities.</p>
+                    </div>-->
+                    <img src="images/Jeffrey Zhu.jpg" alt="Jeffrey Zhu">
+                    <div class="profile-details">
+                        <h4>Jeffrey Zhu</h4>
+                        <h5>RIT</h5>
+                        <p>He is a high school student from Wisconson, admitted to RIT with $23,000 scholarship per year. He is experienced in Python, Linux, and web development. Rank 1 Hack the Shield 2K25, AAPT Physics Bowl Natiinal Gold, CS50x & Fortinet certified. Volunteer coach guiding students in apps and web development.</p>
                     </div>
-                </div>-->
+                </div>
             </div>
             <h2>Judges</h2>
             <!--row1-->
