--- a/mobile.html
+++ b/mobile.html
@@ -59,8 +59,8 @@
             <a href="ambassador-hub.html" class="button">Ambassador Hub</a>
             <a href="aboutus.html" class="button">About Us</a>
             <a href="faq.html" class="button">FAQ</a>
-            <p>Coming Soon: Bit by Bit Coding in Chinese</p>
-            <p>即將推出：《Bit by Bit Coding》中文版</p>
+            <p>Coming Soon: Bit by Bit Coding in Spanish</p>
+            <p>Próximamente: "Bit by Bit Coding" en español</p>
         </div>
 
         <!-- Chatbot Widget -->
