--- a/main.html
+++ b/main.html
@@ -41,8 +41,8 @@
             <a href="faq.html" class="button">FAQ</a>
             <!--<a href="中文.html" class="button">中文</a>
             <a href="en-español.html" class="button">En Español</a>-->
-            <p>Coming Soon: Bit by Bit Coding in Chinese</p>
-            <p>即將推出：《Bit by Bit Coding》中文版</p>
+            <p>Coming Soon: Bit by Bit Coding in Spanish</p>
+            <p>Próximamente: "Bit by Bit Coding" en español</p>
         </div>
 
         <!-- NEW STATS SECTION -->
