--- a/hackathons.html
+++ b/hackathons.html
@@ -46,11 +46,6 @@
             </ul>
             <p>Registration Closed</p>
             <!--<button class="button" onclick="registernow()">Register</button>-->
-            <script>
-                function registernow() {
-                    window.location.href = "https://forms.gle/Pay7Gk416HDBZhLeA";
-                }
-            </script>
         </div>
 
         <!-- Fall 2025 Hackathons -->
@@ -64,12 +59,8 @@
                     <div class="nested-list">Date: November 22nd, 2025, Time: 12:00 PM Eastern Time - 3:00 PM Eastern Time</div>
                 </li>
             </ul>
+            <p>Registration Closed</p>
             <!--<button class="button" onclick="register()">Register</button>-->
-                <script>
-                    function register() {
-                        window.location.href = "https://docs.google.com/forms/d/e/1FAIpQLScrI4yertFJtbNOex9eocFzFvAkjxOtI8MPNUry_3YLPS9GBA/viewform?usp=dialog";
-                    }
-                </script>
         </div>
 
         <!-- Spring 2026 Hackathons -->
@@ -83,11 +74,10 @@
                     <div class="nested-list">Date: April 25th, 2026, Time: 12:00 PM Eastern Time - 3:00 PM Eastern Time</div>
                 </li>
             </ul>
-            <!--<button class="button" onclick="register()">Register</button>-->
-            <p>Registration Opens January 15th, 2026</p>
+            <button class="button" onclick="register()">Register</button>
                 <script>
                     function register() {
-                        window.location.href = "https://docs.google.com/forms/d/e/1FAIpQLScrI4yertFJtbNOex9eocFzFvAkjxOtI8MPNUry_3YLPS9GBA/viewform?usp=dialog";
+                        window.location.href = "https://forms.gle/3M2qx2zryZ962agc7";
                     }
                 </script>
         </div>
@@ -106,7 +96,7 @@
             <!--<button class="button" onclick="register()">Register</button>-->
             <p>Registration Opens May 1st, 2026</p>
                 <script>
-                    function register() {
+                    function registerb() {
                         window.location.href = "https://docs.google.com/forms/d/e/1FAIpQLScrI4yertFJtbNOex9eocFzFvAkjxOtI8MPNUry_3YLPS9GBA/viewform?usp=dialog";
                     }
                 </script>
