--- a/courses.html
+++ b/courses.html
@@ -193,9 +193,13 @@ function registerb() {
             <div class="nested-list">Time: 12:00 PM Eastern Time - 1:00 PM Eastern Time</div>
         </li>
     </ul>
-    <!--<button class="button" onclick="register()">Register</button>-->
-    <p>Registration Opens January 15th, 2026</p>
+    <button class="button" onclick="register()">Register</button>
 </div>
+<script>
+function register() {
+    window.location.href = "https://forms.gle/zCGmApaCV7xoNeZN9";
+}
+</script>
 
 <div class="container">
     <h1>Spring 2026 Session B Courses (Upcoming)</h1>
@@ -224,9 +228,13 @@ function registerb() {
             <div class="nested-list">Time: 12:00 PM Eastern Time - 1:00 PM Eastern Time</div>
         </li>
     </ul>
-    <!--<button class="button" onclick="register()">Register</button>-->
-    <p>Registration Opens January 15th, 2026</p>
+    <button class="button" onclick="registerb()">Register</button>
 </div>
+<script>
+function registerb() {
+    window.location.href = "https://forms.gle/iMBK39ymme1aDhFn8";
+}
+</script>
 
 <!-- Summer 2026 -->
 <div class="container">
