--- a/volunteer-hub.html
+++ b/volunteer-hub.html
@@ -47,7 +47,7 @@
         <ul>
             <li><a class="navbar-link" href="https://forms.gle/jftXAUFGDHwiAH4n9">Sign up to be a Coach</a></li>
             <li><a class="navbar-link" href="https://forms.gle/4Rpih2RvRyo19VZeA">Sign up to be a Judge</a></li>
-            <li><a class="navbar-link" href="https://forms.gle/vuXttHzcDJEYyQ6d7">Sign up to be a Bilingual Coach</a></li>
+            <!--<li><a class="navbar-link" href="https://forms.gle/vuXttHzcDJEYyQ6d7">Sign up to be a Bilingual Coach</a></li>-->
         </ul>
     </div>
 
